Fix overlap in mobile

--- a/src/main/content/_assets/css/home.css
+++ b/src/main/content/_assets/css/home.css
@@ -464,7 +464,7 @@
     margin-bottom: 107px;
 }
 
-#collaborate_title {
+#collaborate_title, #get_involved_title {
     font-size: 24px;
     margin-top: 0;
     margin-bottom: 36px;
@@ -488,6 +488,7 @@
     position: absolute;
 }
 
+
 @media (max-width: 767px) {
 
     #collaborate_container {
@@ -498,6 +499,10 @@
 
     #collaborate_image {
         padding: 20px;
+    }
+
+    #collaborate_get_involved {
+        margin-top: 500px;
     }
 
 }
